# expeyes-programs

./: .gitignore  99-phoenix.rules  Makefile  Makefile-firmware  README.TXT  README.md  build_eyes17_only  diff-excludes  eyes17-1.0.0.deb  makeTranslationKit  microhope.py  mkOrigTarXz.py  motionsensor-two.py  postinst  rodPendulum.py  setup.py  tof.py
EJun/: EJ-modules.mod  ejun-cache.bck  ejun-cache.lib  ejun-rescue.lib  ejun.cmp  ejun.csv  ejun.drl  ejun.kicad_pcb  ejun.net  ejun.pro  ejun.sch
clib/: basic-io.c  capdemo-hr.c  capdemo1.c  capdemo2.c  capdemo3.c  capdemo4.c  ccs-cap.c  ejlib.c  ejlib.h  eyesj.cal
clib/expeyes-clib/: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  autogen.sh  clean-all.sh  configure  configure.ac  configure.in  ejlib.c
clib/expeyes-clib/src/: Makefile.am  Makefile.in  basic-io.c  capdemo-hr.c  capdemo.c  capdemo1.c  capdemo2.c  capdemo3.c  capdemo4.c  ccs-cap.c  ejlib.c  ejlib.h
debian/: README.source  changelog  control  copyright  expeyes-clib.install  expeyes-doc-common.install  expeyes-doc-common.manpages  expeyes-doc-en.install  expeyes-firmware-dev.install  expeyes-web.config  expeyes-web.install  expeyes-web.postinst  expeyes-web.postrm  expeyes-web.templates  expeyes.dirs  expeyes.install  expeyes.manpages  eyes17-blockly-plugin.install  eyes17.install  eyes17.manpages  eyes17.postinst  eyes17.prerm  get-newest-source.sh  libej-dev.install  libej0.install  microhope.dirs  microhope.manpages  python-expeyes.install  python-expeyes.postinst  python-expeyes.postrm  python3-expeyes.install  rules  watch
desktop/: Phoenix-ASM.desktop  expeyes-17.desktop  expeyes-doc.desktop  expeyes-junior-doc.desktop  expeyes-junior.desktop  expeyes.desktop  eyes17-doc.desktop  progman-jr-doc.desktop
ejunQt/: npnCEout.py  rodPendulum.py  scope.py
expeyes/: HX711.py  eyelib.c  eyelib.h  eyemath.py  eyeplot.py  eyeplot17.py  eyes.c  eyes.py  eyesj-test.py  eyesj.py  eyesplotter.py  fit-data.py  mca.py  qtiplot_script.py
expeyes-junior/: RLCdischarge.py  amfm.py  croplus.py  diode_iv.py  logger.py  pt100.py  resonance.py
expeyes-web/: Makefile  apache-expeyes-vhost.conf
eyes-17/: ADS1115_logger.py  LCfilter.py  MPL-scope-mplib.py  Piezo-freq-resp.py  RCsteadystate.py  RCtransient.py  RLCsteadystate.py  RLCtransient.py  RLtransient.py  amfm.py  change-pvs.py  (+24 more)
(+3683 files in other folders)
